# GeometryWars

./: CMakeLists.txt  README.md
assets/: bitmaps  bullet_polygon  player_polygon
entities/: BigBrother.cpp  Enemy.cpp  Entity.cpp  Player.cpp  Smart.cpp  Stupid.cpp
geometry/: Matrix2d.cpp  Polygon.cpp  Vector2d.cpp
include/: Defines.h  Entities.h  GameClasses.h  Geometry.h  Settings.h  Utils.h
utils/: Game.cpp  Utils.cpp
